--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY="AIzaSyAjlaRI_jfTdLZe3bs23NkAMFX0y6XfDFk"
+FLASK_SECRET_KEY="ImMh6wl8pY3wzTgdfGSpTy3GrpoJKydu0wqY7R8Kq0uUGFlWGz"
+your_secret_key="RIfPrDhE25d1BexQKjvyEuSVnL2BVlniGS99uI2qxVBxErt3mv"
